Bugfix Align close #10

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,14 +5,9 @@
  * Replace them with your own styles or remove the file completely.
  */
 
- /* editor */
+ /* editor and front end */
 .wp-block-tiptip-hyperlink-group-block {
 	cursor: pointer;
-}
-
-/* front end */
-
-.wp-block-hyperlink-group {
 	display: block;
 }
 
